force-app/main/default/objects/Account/fields/Credit_Limit_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_USD_Equiv__c</fullName>
    <formula>Credit_limit_insurance_currency__c  *

case ( Credit_Insurance_CCY__c  ,&apos;USD&apos;,1, 
&apos;EUR&apos;, Marketplace_for_EUR_FX_rate__r.latest_to_usd_rate__c ,  
&apos;SGD&apos;, Marketplace_for_SGD_FX_rate__r.latest_to_usd_rate__c , 
&apos;HKD&apos;, (1/7.8), 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>