force-app/main/default/objects/Account/fields/Credit_Limited_Provided_by_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limited_Provided_by_Insurer__c</fullName>
    <inlineHelpText>Credit limit answer provide by the insurer for this Buyer</inlineHelpText>
    <label>Credit Limited Provided by Insurer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>