force-app/main/default/objects/Account/fields/Credit_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Type__c</fullName>
    <label>Credit Report Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Assessment Report</fullName>
            </value>
            <value>
                <fullName>Biz Check</fullName>
            </value>
            <value>
                <fullName>Crystal Credit Report</fullName>
            </value>
            <value>
                <fullName>Gladtrust Business Credit Report</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>