force-app/main/default/objects/Account/fields/current_buyers_funders__c.field-meta.xml
<CustomField>
    <fullName>current_buyers_funders__c</fullName>
    <label>current buyers (funders)</label>
    <type>TextArea</type>
</CustomField>