force-app/main/default/objects/Account/fields/current_invoices__c.field-meta.xml
<CustomField>
    <fullName>current_invoices__c</fullName>
    <label>current invoices</label>
    <type>TextArea</type>
</CustomField>