force-app/main/default/objects/Account/fields/Data_Source_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Revenue__c</fullName>
    <label>Data Source Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>Management accounts</fullName>
            </value>
            <value>
                <fullName>Finance Report</fullName>
            </value>
            <value>
                <fullName>Credit Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>