force-app/main/default/objects/Account/fields/days_since_onboarded__c.field-meta.xml
<CustomField>
    <fullName>days_since_onboarded__c</fullName>
    <formula>today() -  Onboarding_completed_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days since onboarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>