force-app/main/default/objects/Account/fields/days_with_no_defaults__c.field-meta.xml
<CustomField>
    <fullName>days_with_no_defaults__c</fullName>
    <formula>today() - NULLVALUE (last_default_date__c, Onboarding_completed_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days with no defaults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>