force-app/main/default/objects/Account/fields/Delta_Created_date_onboarded__c.field-meta.xml
<CustomField>
    <fullName>Delta_Created_date_onboarded__c</fullName>
    <description>Delta in days to evaluate number of days to onboard an account</description>
    <formula>Onboarding_completed_date__c -  DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Delta in days to evaluate number of days to onboard an account</inlineHelpText>
    <label>Delta Created date_onboarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>