force-app/main/default/objects/Account/fields/Delta_Created_date_Today__c.field-meta.xml
<CustomField>
    <fullName>Delta_Created_date_Today__c</fullName>
    <description>to calculate the Delta between today and created date , for report and KPI</description>
    <formula>TODAY() -    DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>to calculate the Delta between today and created date , for report and KPI</inlineHelpText>
    <label>Delta  Created date -Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>