force-app/main/default/objects/Account/fields/Detailed_registration_submitted_date__c.field-meta.xml
<CustomField>
    <fullName>Detailed_registration_submitted_date__c</fullName>
    <label>Detailed registration  submitted date</label>
    <type>Date</type>
</CustomField>