force-app/main/default/objects/Account/fields/Digital_Marketing_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Campaign_ID__c</fullName>
    <formula>Incomlend_Lead__r.marketing_campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital Marketing Campaign ID</label>
    <type>Text</type>
</CustomField>