force-app/main/default/objects/Account/fields/Digital_Marketing_Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Tracking_ID__c</fullName>
    <formula>Incomlend_Lead__r.marketing_tracking_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital Marketing Tracking ID</label>
    <type>Text</type>
</CustomField>