force-app/main/default/objects/Account/fields/discount_profit_share_percent__c.field-meta.xml
<CustomField>
    <fullName>discount_profit_share_percent__c</fullName>
    <label>discount profit share percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>