force-app/main/default/objects/Account/fields/Discount_Profit_Share_Percent_GBP__c.field-meta.xml
<CustomField>
    <fullName>Discount_Profit_Share_Percent_GBP__c</fullName>
    <label>Discount Profit Share Percent (GBP)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>