force-app/main/default/objects/Account/fields/Discount_Profit_Share_Percent_SGD__c.field-meta.xml
<CustomField>
    <fullName>Discount_Profit_Share_Percent_SGD__c</fullName>
    <description>Discount Profit Share Percent (SGD)</description>
    <label>Discount Profit Share Percent (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>