force-app/main/default/objects/Account/fields/Discount_Profit_Share_Percent_USD__c.field-meta.xml
<CustomField>
    <fullName>Discount_Profit_Share_Percent_USD__c</fullName>
    <description>Discount Profit Share Percent (USD)</description>
    <label>Discount Profit Share Percent (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>