force-app/main/default/objects/Account/fields/Discussion_board_link__c.field-meta.xml
<CustomField>
    <fullName>Discussion_board_link__c</fullName>
    <label>Discussion board link</label>
    <type>Url</type>
</CustomField>