force-app/main/default/objects/Account/fields/DL_Register_of_Director__c.field-meta.xml
<CustomField>
    <fullName>DL_Register_of_Director__c</fullName>
    <inlineHelpText>Check if you have the Register of Director</inlineHelpText>
    <label>DL Register of Director</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>