force-app/main/default/objects/Account/fields/dormant__c.field-meta.xml
<CustomField>
    <fullName>dormant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dormant</label>
    <type>Checkbox</type>
</CustomField>