force-app/main/default/objects/Account/fields/Eolis_actual_response_date__c.field-meta.xml
<CustomField>
    <fullName>Eolis_actual_response_date__c</fullName>
    <label>Insurer actual response date</label>
    <type>DateTime</type>
</CustomField>