force-app/main/default/objects/Account/fields/Eolis_expected_response_date__c.field-meta.xml
<CustomField>
    <fullName>Eolis_expected_response_date__c</fullName>
    <label>Insurer expected response date</label>
    <type>DateTime</type>
</CustomField>