force-app/main/default/objects/Account/fields/Eolis_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Eolis_Request_Date__c</fullName>
    <label>Insurer Request Date</label>
    <type>DateTime</type>
</CustomField>