force-app/main/default/objects/Account/fields/Euler_Hermes_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Euler_Hermes_Credit_Rating__c</fullName>
    <label>Euler Hermes Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>*not checked*</fullName>
                <default>true</default>
                <label>*not checked*</label>
            </value>
            <value>
                <fullName>*no record*</fullName>
            </value>
            <value>
                <fullName>*requested Rating*</fullName>
            </value>
            <value>
                <fullName>*requested Revision*</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>*Gathering more info*</fullName>
            </value>
            <value>
                <fullName>*1 (old rating)</fullName>
            </value>
            <value>
                <fullName>*2 (old rating)</fullName>
            </value>
            <value>
                <fullName>*3 (old rating)</fullName>
            </value>
            <value>
                <fullName>*4 (old rating)</fullName>
            </value>
            <value>
                <fullName>*5 (old rating)</fullName>
            </value>
            <value>
                <fullName>*6 (old rating)</fullName>
            </value>
            <value>
                <fullName>*7 (old rating)</fullName>
            </value>
            <value>
                <fullName>*8 (old rating)</fullName>
            </value>
            <value>
                <fullName>*9 (old rating)</fullName>
            </value>
            <value>
                <fullName>*10 (old rating)</fullName>
            </value>
            <value>
                <fullName>not yet graded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>