force-app/main/default/objects/Account/fields/EUR_available_eWallet__c.field-meta.xml
<CustomField>
    <fullName>EUR_available_eWallet__c</fullName>
    <formula>EUR_eWallet_Balance__c - EUR_eWallet__r.Reservations__c  -  EUR_eWallet__r.Withdrawals_Not_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR available eWallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>