force-app/main/default/objects/Account/fields/EUR_available_eWallet_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>EUR_available_eWallet_USD_Equiv__c</fullName>
    <formula>EUR_available_eWallet__c *  Marketplace_for_EUR_FX_rate__r.latest_to_usd_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR available eWallet USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>