force-app/main/default/objects/Account/fields/EUR_eWallet__c.field-meta.xml
<CustomField>
    <fullName>EUR_eWallet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EUR eWallet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>eWallet__c.Account__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>eWallet__c.CCY__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>eWallet__c</referenceTo>
    <relationshipLabel>Accounts (EUR eWallet)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>