force-app/main/default/objects/Account/fields/EUR_eWallet_Balance2__c.field-meta.xml
<CustomField>
    <fullName>EUR_eWallet_Balance2__c</fullName>
    <formula>EUR_eWallet__r.Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR eWallet Balance2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>