force-app/main/default/objects/Account/fields/EUR_eWallet_Balance__c.field-meta.xml
<CustomField>
    <fullName>EUR_eWallet_Balance__c</fullName>
    <label>EUR eWallet Balance</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.CCY__c</field>
        <operation>equals</operation>
        <value>EUR</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed by operations, Confirmed by Finance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.isArchived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>