force-app/main/default/objects/Account/fields/EUR_Expected_First_Deposit__c.field-meta.xml
<CustomField>
    <fullName>EUR_Expected_First_Deposit__c</fullName>
    <label>EUR Expected First Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>