force-app/main/default/objects/Account/fields/EUR_Position__c.field-meta.xml
<CustomField>
    <fullName>EUR_Position__c</fullName>
    <formula>EUR_eWallet__r.Balance__c  +  (EUR_eWallet__r.In_Progress__c*-1)  -  EUR_eWallet__r.Withdrawals_Not_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>