force-app/main/default/objects/Account/fields/EUR_Total_in_progress_invoices_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>EUR_Total_in_progress_invoices_USD_Equiv__c</fullName>
    <formula>(EUR_eWallet__r.In_Progress__c*-1)  * Marketplace_for_EUR_FX_rate__r.latest_to_usd_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR Total in progress invoices USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>