force-app/main/default/objects/Account/fields/EUR_unconfirmed_Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>EUR_unconfirmed_Withdrawals__c</fullName>
    <label>EUR unconfirmed Withdrawals</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.CCY__c</field>
        <operation>equals</operation>
        <value>EUR</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>80.Withdrawal</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>