force-app/main/default/objects/Account/fields/exchange_incomlend_com_initial_password__c.field-meta.xml
<CustomField>
    <fullName>exchange_incomlend_com_initial_password__c</fullName>
    <label>exchange incomlend com initial password</label>
    <type>TextArea</type>
</CustomField>