force-app/main/default/objects/Account/fields/exchange_incomlend_com_user_name__c.field-meta.xml
<CustomField>
    <fullName>exchange_incomlend_com_user_name__c</fullName>
    <externalId>true</externalId>
    <label>exchange.incomlend.com user name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>