force-app/main/default/objects/Account/fields/exchange_incomlend_com_userID__c.field-meta.xml
<CustomField>
    <fullName>exchange_incomlend_com_userID__c</fullName>
    <externalId>true</externalId>
    <label>exchange.incomlend.com userID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>