force-app/main/default/objects/Account/fields/Expected_Onboarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Onboarded_Date__c</fullName>
    <formula>CreatedDate +42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Onboarded Date</label>
    <type>Date</type>
</CustomField>