force-app/main/default/objects/Account/fields/external_credit_rating__c.field-meta.xml
<CustomField>
    <fullName>external_credit_rating__c</fullName>
    <label>external credit rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>