force-app/main/default/objects/Account/fields/external_credit_rating_received_date__c.field-meta.xml
<CustomField>
    <fullName>external_credit_rating_received_date__c</fullName>
    <label>external credit rating received date</label>
    <type>Date</type>
</CustomField>