force-app/main/default/objects/Account/fields/External_Credit_Report_Provider__c.field-meta.xml
<CustomField>
    <fullName>External_Credit_Report_Provider__c</fullName>
    <label>External Credit Report Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trelis Business Reports</fullName>
                <default>true</default>
                <label>Trelis Business Reports</label>
            </value>
            <value>
                <fullName>Dunn &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>Gladtrust</fullName>
            </value>
            <value>
                <fullName>Crystal Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>