force-app/main/default/objects/Account/fields/External_View__c.field-meta.xml
<CustomField>
    <fullName>External_View__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>to activate an external view layout of the account for external need , uncheck to come back to normal layout</inlineHelpText>
    <label>External View</label>
    <type>Checkbox</type>
</CustomField>