force-app/main/default/objects/Account/fields/first_contact_date__c.field-meta.xml
<CustomField>
    <fullName>first_contact_date__c</fullName>
    <label>first contact date</label>
    <type>Date</type>
</CustomField>