force-app/main/default/objects/Account/fields/First_Deposit_Notes__c.field-meta.xml
<CustomField>
    <fullName>First_Deposit_Notes__c</fullName>
    <label>First Deposit Notes</label>
    <type>TextArea</type>
</CustomField>