force-app/main/default/objects/Account/fields/Full_billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_billing_Address__c</fullName>
    <formula>BillingStreet  +  BillingCity  +  BillingState  +  BillingPostalCode  +  BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full billing Address</label>
    <type>Text</type>
</CustomField>