force-app/main/default/objects/Account/fields/Funding_Comments__c.field-meta.xml
<CustomField>
    <fullName>Funding_Comments__c</fullName>
    <label>Funding Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>