force-app/main/default/objects/Account/fields/GBP_Available_eWallet_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>GBP_Available_eWallet_USD_Equiv__c</fullName>
    <label>GBP Available eWallet USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>