force-app/main/default/objects/Account/fields/GBP_eWallet__c.field-meta.xml
<CustomField>
    <fullName>GBP_eWallet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GBP eWallet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>eWallet__c.CCY__c</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>eWallet__c</referenceTo>
    <relationshipLabel>Accounts (GBP eWallet)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>