force-app/main/default/objects/Account/fields/GBP_Total_in_progress_Invoices_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>GBP_Total_in_progress_Invoices_USD_Equiv__c</fullName>
    <label>GBP Total in progress Invoices USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>