force-app/main/default/objects/Account/fields/Getting_form_days__c.field-meta.xml
<CustomField>
    <fullName>Getting_form_days__c</fullName>
    <formula>If(ISBLANK(Detailed_registration_submitted_date__c), today() ,Detailed_registration_submitted_date__c) 
-
If(ISBLANK(first_contact_date__c), DATEVALUE(CreatedDate) , first_contact_date__c)</formula>
    <label>Getting submission days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>